[project]
name = "evpn"
description = "ExpressVPN python native API"
readme = "README.md"
requires-python = ">=3.7"
version = "1.0.3"
authors = [
    { name = "thewh1teagle" }
]
dependencies = [
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "twine"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
